Pending changes exported from your codespace

--- a/about.html
+++ b/about.html
@@ -2,11 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Progear Hub - About</title>
+    <link rel="icon" href="icon-transparent.png">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Noto+Sans:wght@400;600&family=Spoof&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>About us</h1>
+    <header class="main-header">
+        <a href="/index.html">
+            <img class="logo" src="images/LOGO.png" alt="Progear Hub logo">
+        </a>
+        <button type="button" class="menu-button"><i class="fa-solid fa-bars"></i></button>
+        <form id="search">
+            <input type="search" name="search" placeholder="Type your search">
+            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+        <nav class="main-navigation">
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <main class="about">
+        <section class="about-intro">
+            <h1>About Us</h1>
+            <p>Welcome to Progear Hub, where we are passionate about providing the highest quality gear to fuel your fitness journey. Our mission is to empower you to push your limits with gear designed to help you perform at your best.</p>
+        </section>
+
+        <section class="our-mission">
+            <h2>Our Mission</h2>
+            <p>At Progear Hub, we aim to make fitness accessible for everyone. We believe in offering top-of-the-line products that support a wide range of activities. Whether you’re lifting, running, or training, our gear is designed with your performance in mind. Our mission is simple: to help you achieve your goals with confidence and style.</p>
+        </section>
+
+        <section class="our-values">
+            <h2>Our Values</h2>
+            <ul>
+                <li><strong>Quality</strong>: We never compromise on the quality of our products. Our gear is built to last and perform at the highest standards.</li>
+                <li><strong>Innovation</strong>: We constantly strive to innovate, bringing new and exciting products to the market that push the boundaries of fitness gear.</li>
+                <li><strong>Community</strong>: We are more than just a brand – we are a community of like-minded individuals who are dedicated to growth and achievement.</li>
+                <li><strong>Sustainability</strong>: We are committed to sustainability and environmental responsibility in every part of our business, from sourcing materials to packaging.</li>
+            </ul>
+        </section>
+
+    
+    </main>
+
+    <footer class="main-footer">
+        <nav class="social">
+            <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+        </nav>
+        <p class="copyright">&copy; Progear Hub 2025. All rights reserved.</p>
+    </footer>
 </body>
 </html>
