--- a/index.html
+++ b/index.html
@@ -1,118 +1,89 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <!-- head is for metadata -->
-    <!-- title is the name of the document  -->
-    <title>Progear Hub</title>
-    <!-- icon for page -->
+    <meta charset="UTF-8">
+    <title>Progear Hub - Home</title>
     <link rel="icon" href="icon-transparent.png">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="responsive.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Noto+Sans:wght@400;600&family=Spoof&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header class="main-header">
-        <a href="index.html">
-            <img class="logo" src="images/PGHlogo.png">
+        <a href="/index.html">
+            <img class="logo" src="images/LOGO.png" alt="Progear Hub logo">
         </a>
-        <button type="button" class="menu-button">
-            <i class="fa-solid fa-bars"></i>
-        </button>
+        <button type="button" class="menu-button"><i class="fa-solid fa-bars"></i></button>
         <form id="search">
-            <input type="search" name="search" placeholder="type your search">
-            <button type="submit" name="search-button">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
+            <input type="search" name="search" placeholder="Type your search">
+            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
         <nav class="main-navigation">
-            <a href="index.html">
-                <!-- <i class="fa-solid fa-house"></i> -->
-                Home
-            </a>
+            <a href="index.html">Home</a>
             <a href="products.html">Products</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
-        <section class="featured">
-            <h2>Featured Categories</h2>
-            <div class="categories">
-                <div class="card">
-                    <img class="card-image" alt="a pair of shoes" src="images/branislav-belko-lJ7iAZxplpc-unsplash.jpg">
-                    <div class="card-content">
-                        <h4>Shoes</h4>
-                        <p class="description">Sports shoes</p>
-                        <a href="#" class="card-button">Shop</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-image" alt="a tennis racquet and a ball"
-                        src="images/hoi-pham-eLZwsPO8cCQ-unsplash.jpg">
-                    <div class="card-content">
-                        <h4>Tennis</h4>
-                        <p class="description">Tennis gear</p>
-                        <a href="#" class="card-button">Shop</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-image" src="images/ruslan-ruslan-AhAMJgq5QPM-unsplash.jpg">
-                    <div class="card-content">
-                        <h4>Basketball</h4>
-                        <p class="description">Basketball gear</p>
-                        <a href="#" class="card-button">Shop</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-image" src="images/ruslan-ruslan-AhAMJgq5QPM-unsplash.jpg">
-                    <div class="card-content">
-                        <h4>Basketball</h4>
-                        <p class="description">Basketball gear</p>
-                        <a href="#" class="card-button">Shop</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-image" src="images/ruslan-ruslan-AhAMJgq5QPM-unsplash.jpg">
-                    <div class="card-content">
-                        <h4>Basketball</h4>
-                        <p class="description">Basketball gear</p>
-                        <a href="#" class="card-button">Shop</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-image" src="images/ruslan-ruslan-AhAMJgq5QPM-unsplash.jpg">
-                    <div class="card-content">
-                        <h4>Basketball</h4>
-                        <p class="description">Basketball gear</p>
-                        <a href="#" class="card-button">Shop</a>
-                    </div>
+
+    <main class="featured">
+        <h2>Shop the Look</h2>
+        <div class="home-categories">
+            <!-- 6 images, no prices -->
+            <div class="card">
+                <img class="home-card-image" src="images/SculptTank.webp" alt="Sculpt Tank">
+                <div class="card-content">
+                    <h4>Sculpt Tank Red</h4>
+                    <a href="product_link.html" class="card-button">Shop Here</a>
                 </div>
             </div>
-        </section>
+            <div class="card">
+                <img class="home-card-image" src="images/Tee.webp" alt="White Tee">
+                <div class="card-content">
+                    <h4>White Tee</h4>
+                    <a href="product_link.html" class="card-button">Shop Here</a>
+                </div>
+            </div>
+            <div class="card">
+                <img class="home-card-image" src="images/Bikershortsred.webp" alt="Red Biker Shorts">
+                <div class="card-content">
+                    <h4>Biker Shorts Red</h4>
+                    <a href="product_link.html" class="card-button">Shop Here</a>
+                </div>
+            </div>
+            <div class="card">
+                <img class="home-card-image" src="images/bikershorts.webp" alt="Black Biker Shorts">
+                <div class="card-content">
+                    <h4>Biker Shorts Black</h4>
+                    <a href="product_link.html" class="card-button">Shop Here</a>
+                </div>
+            </div>
+            <div class="card">
+                <img class="home-card-image" src="images/Legging.webp" alt="Black Legging">
+                <div class="card-content">
+                    <h4>Black Legging</h4>
+                    <a href="product_link.html" class="card-button">Shop Here</a>
+                </div>
+            </div>
+            <div class="card">
+                <img class="home-card-image" src="images/flarepants.webp" alt="Flare Legging">
+                <div class="card-content">
+                    <h4>Flare Legging</h4>
+                    <a href="product_link.html" class="card-button">Shop Here</a>
+                </div>
+            </div>
+        </div>
     </main>
+
     <footer class="main-footer">
         <nav class="social">
-            <a href="https://facebook.com">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="https://instagram.com">
-                <i class="fa-brands fa-square-instagram"></i>
-            </a>
-            <a href="https://tiktok.com">
-                <i class="fa-brands fa-tiktok"></i>
-            </a>
+            <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
         </nav>
-        <p class="copyright">&copy; Pro Grear Hub 2025. All rights reserved.</p>
+        <p class="copyright">&copy; Progear Hub 2025. All rights reserved.</p>
     </footer>
 </body>
-
 </html>
